# costpi-backend

./: docker-compose.yml  manage.py  pyproject.toml
src/apps/: api.py  settings.py  testes.py  urls.py
src/apps/gantt/: api.py  apps.py  schemas.py  services.py
